--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL="mongodb+srv://davidvictor297:victor296@cluster0.pbqelp9.mongodb.net/trenova?retryWrites=true&w=majority"
+MONGODB_URL="mongodb+srv://davidvictor297:victor296@trenova.gpc1pt1.mongodb.net/trenova?retryWrites=true&w=majority&appName=trenova"
 NODE_ENV="production"
 # Application-specific
 JWT_SECRET= trenova_secret_key
