--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.7",
     "multer": "^1.4.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.1.1",
     "otp-generator": "^4.0.1",
     "sharp": "^0.33.0",
